<resources>
    <string name="app_name">Recipe it</string>

    <string name="desc_home">Icone menu pour le fragment accueil</string>
    <string name="desc_world">Icone menu pour le fragment voyage culinaire</string>
    <string name="desc_more">Icone menu pour le fragment recherche avancée</string>
    <string name="desc_user">Icone du compte pour accéder à son compte</string>
    <string name="desc_mic">Icone du micro pour activer la fonction vocale</string>
    <string name="desc_plus">Icone du bouton + pour la recherche avec filtres</string>
    <string name="desc_fridge">Icone du bouton pour accéder à son placard/fridge</string>
    <string name="desc_ajout">Icone du bouton pour ajouter une recette</string>
    <string name="desc_logo">Logo Recipe it !</string>
    <string name="desc_triangle">Icone du triangle, indiquant un lien</string>
    <string name="desc_deco">Icone de la deconnexion</string>
    <string name="desc_img_rec">Photographie de la recette</string>
    <string name="desc_img_rec_ic">Icone pour choisir la photographie</string>

    <string name="icone_user">Représentation iconographique de l\'utilisateur</string>
    <string name="icone_mdp">Représentation iconographique du mot de passe</string>
    <string name="icone_nom">Représentation iconographique du nom de la recette</string>

    <string name="hint_recherche">Recherche simple</string>
    <string name="hint_pseudo">pseudo</string>
    <string name="hint_mdp">mot de passe</string>
    <string name="hint_pseudo2">choix du pseudo</string>
    <string name="hint_mdp2">choix du mot de passe</string>
    <string name="hint_mdp3">confirmation</string>
    <string name="hint_nom">Nom</string>


    <string name="txt_ajout1">Ajouter une photo</string>
    <string name="txt_nom">Nom de votre recette</string>
    <string name="txt_dif">La difficulté</string>
    <string name="txt_ing">Choix des ingrédients</string>
    <string name="txt_q">Quantité :</string>

    <string name="valider">valider</string>
    <string name="titre_inscr1">Bienvenue sur</string>
    <string name="titre_inscr2">Recipe it !</string>
    <string name="inscription">Pas de compte ? Inscris-toi ici</string>
    <string name="titre_co1">Connexion à</string>
    <string name="titre_co2">mon compte</string>
    <string name="titre_recherche">Recherche avancée</string>
    <string name="titre_banniere1">Une envie</string>
    <string name="titre_banniere2">particulière</string>
    <string name="titre_espace_perso1">Votre espace</string>
    <string name="titre_espace_perso2">personnel</string>
    <string name="titre_creer1">Créer une</string>
    <string name="titre_creer2">recette</string>
    <string name="titre_fridge1">Modifier</string>
    <string name="titre_fridge2">mon fridge</string>
    <string name="titre_favoris1">Mes recettes</string>
    <string name="titre_favoris2">favorites</string>
    <string name="titre_compte1">Paramètres</string>
    <string name="titre_compte2">du compte</string>
    <string name="titre_ajout1">Nouvelle</string>
    <string name="titre_ajout2">recette</string>
    <string name="titre_espace_parametre1">Réglez vos</string>
    <string name="titre_espace_parametre2">paramètres</string>
    <string name="titre_espace_parametre_alergie">Êtes vous allergique ?</string>
    <string name="titre_espace_parametre_resetmdp">Changer votre mot de passe ?</string>
    <string name="titre_espace_parametre_delete">Supprimer votre compte ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_parameter">ParameterActivity</string>
    <string name="choix_du_mail">Choix du mail</string>
    <string name="title_activity_recette">RecetteActivity</string>
</resources>
