<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.recipeit.recipeit.Inscription">

    <TextView
        android:id="@+id/txtCo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_inscr1"
        android:textColor="@color/noir"
        app:layout_constraintEnd_toStartOf="@id/guidelineMid"
        app:layout_constraintTop_toBottomOf="@id/guidelinetop"
        android:fontFamily="@font/cookie"
        android:textSize="35sp"/>
    <TextView
        android:id="@+id/txtCo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_inscr2"
        android:textColor="@color/noir"
        android:layout_marginStart="7dp"
        app:layout_constraintStart_toStartOf="@id/guidelineMid"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCo1"
        android:fontFamily="@font/ralewaylight"
        android:textSize="23sp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/barre"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/rouge"
        app:layout_constraintRight_toRightOf="@id/guidelineMid"
        app:layout_constraintLeft_toLeftOf="@id/guidelineMid"
        app:layout_constraintTop_toBottomOf="@+id/txtCo2" />

    <LinearLayout
        android:id="@+id/textPseudoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/barre">

        <ImageView
            android:id="@+id/imgconnexion-user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_user"
            android:contentDescription="@string/icone_user"/>

        <EditText
            android:id="@+id/editTextPseudo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/hint_pseudo2"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:fontFamily="@font/juliussansone"
            android:inputType="textPersonName"
            android:textColor="@color/noir" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textMdpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textPseudoLayout"
        app:layout_constraintStart_toStartOf="@+id/textPseudoLayout"
        app:layout_constraintTop_toBottomOf="@+id/textPseudoLayout">

        <ImageView
            android:id="@+id/imgconnexion-mdp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_mdp"
            android:contentDescription="@string/icone_mdp"/>

        <EditText
            android:id="@+id/editTextMdp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:textColor="@color/noir"
            android:background="@android:color/transparent"
            android:fontFamily="@font/juliussansone"
            android:hint="@string/hint_mdp2"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textMdpLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textPseudoLayout"
        app:layout_constraintStart_toStartOf="@+id/textMdpLayout"
        app:layout_constraintTop_toBottomOf="@+id/textMdpLayout">

        <ImageView
            android:id="@+id/imgconnexion-mdp2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_mdp"
            android:contentDescription="@string/icone_mdp"/>

        <EditText
            android:id="@+id/editTextMdp2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:textColor="@color/noir"
            android:background="@android:color/transparent"
            android:fontFamily="@font/juliussansone"
            android:hint="@string/hint_mdp3"
            android:inputType="textPassword"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        app:layout_constraintTop_toBottomOf="@+id/textMdpLayout2"
        android:onClick="avatar"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinetop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

</android.support.constraint.ConstraintLayout>
