<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondGris"
    tools:context="com.recipeit.recipeit.Accueil">

    <ScrollView
        android:id="@+id/scroll_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/entete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/contain_compte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blanc"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/compte"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="28dp"
                        android:contentDescription="@string/desc_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/user"
                        android:onClick="compte" />

                    <TextView
                        android:id="@+id/pseudo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/compte"
                        android:fontFamily="@font/cookie"
                        android:textColor="@color/fondGrisFonce"
                        android:textSize="24sp"
                        android:onClick="compte" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/pseudo"
                        app:srcCompat="@drawable/ic_triangle_compte"
                        android:contentDescription="@string/desc_triangle"
                        android:onClick="compte"/>

                    <ImageView
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="30dp"
                        app:srcCompat="@drawable/deconnexion"
                        android:contentDescription="@string/desc_deco"
                        android:onClick="deconnexion"/>


                </RelativeLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/banniere"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@drawable/fond"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    app:layout_constraintTop_toBottomOf="@+id/contain_compte">

                    <TextView
                        android:id="@+id/txtTitre1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/cookie"
                        android:text="@string/titre_banniere1"
                        android:textColor="@color/noir"
                        android:textSize="35sp"
                        app:layout_constraintEnd_toStartOf="@id/guidelineMid" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ralewaylight"
                        android:text="@string/titre_banniere2"
                        android:textColor="@color/noir"
                        android:textSize="23sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/txtTitre1"
                        app:layout_constraintStart_toStartOf="@id/guidelineMid" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/barre"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginEnd="145dp"
                        android:layout_marginStart="145dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/rouge"
                        app:layout_constraintTop_toBottomOf="@id/txtTitre1" />

                    <LinearLayout
                        android:id="@+id/rech"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/cornertxt"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:padding="5dp"
                        app:layout_constraintTop_toBottomOf="@id/barre">

                        <ImageView
                            android:id="@+id/micro"
                            android:layout_width="40dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/desc_mic"
                            app:srcCompat="@drawable/micro" />

                        <EditText
                            android:id="@+id/rechercheSimple"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="15"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/juliussansone"
                            android:hint="@string/hint_recherche"
                            android:inputType="text"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/boutonPlus"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="25dp"
                        android:contentDescription="@string/desc_plus"
                        android:src="@drawable/plus"
                        app:layout_constraintEnd_toStartOf="@id/guidelineMid"
                        app:layout_constraintTop_toBottomOf="@id/rech" />

                    <TextView
                        android:id="@+id/texteRechercheAvancée"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/cookie"
                        android:text="@string/titre_recherche"
                        android:textSize="27sp"
                        app:layout_constraintStart_toEndOf="@id/boutonPlus"
                        app:layout_constraintTop_toBottomOf="@id/rech" />

                    <android.support.constraint.Guideline
                        android:id="@+id/guidelineMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />


                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <FrameLayout
                android:id="@+id/contain_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/entete">
                <!-- LES FRAGMENTS SERONT ICI -->
            </FrameLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blanc"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineMenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineMenu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineMenu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineMenu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_home"
            android:onClick="FragAccueil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMenu2"
            app:layout_constraintStart_toStartOf="@+id/guidelineMenu1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/homeactive" />

        <ImageView
            android:id="@+id/voyage"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_world"
            android:onClick="FragVoyage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMenu1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/world" />

        <ImageView
            android:id="@+id/recherche"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:contentDescription="@string/desc_more"
            android:onClick="FragRecherche"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMenu3"
            app:layout_constraintStart_toStartOf="@+id/guidelineMenu2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/more" />

        <ImageView
            android:id="@+id/ajout"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:contentDescription="@string/desc_ajout"
            android:onClick="FragAjout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineMenu4"
            app:layout_constraintStart_toStartOf="@+id/guidelineMenu3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add" />

        <ImageView
            android:id="@+id/fridge"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:contentDescription="@string/desc_fridge"
            android:onClick="FragFridge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineMenu4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fridge" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
